add apache-pack - htaccess file

--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=4d56457356d6e61937bd5671a99d4e76
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://admin:Admin123@db:3306/symfony_api_docker?serverVersion=8.0.35&charset=utf8mb4"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="mysql://admin:Admin123@db:3306/symfony_api_docker?serverVersion=8.0.35&charset=utf8mb4"
+DATABASE_URL="mysql://pllgtrqmbevqwqe2:px90jrjl3ucwpmcj@k9xdebw4k3zynl4u.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/seou80325wuacako"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
