--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,8 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "doctrine:migrations:migrate": "symfony-cmd"
+            "doctrine:migrations:migrate": "symfony-cmd",
+            "lexik:jwt:generate-keypair --skip-if-exists": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
