--- a/.env
+++ b/.env
@@ -41,7 +41,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+#CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^https?://(task-manager-angular-app.web.app|localhost|127\.0\.0\.1)(:[0-9]+)?$)'
 ###< nelmio/cors-bundle ###
 
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
