--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -7,10 +7,10 @@ nelmio_cors:
     max_age: 3600
     origin_regex: true
   paths:
-    "^/":
+    "^/api/":
       origin_regex: true
-      allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"]
-      allow_headers: ["X-Custom-Auth"]
-      allow_methods: ["POST", "PUT", "GET", "DELETE"]
+      allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"] # You probably want to change this regex to match your real domain
+      allow_methods: ["GET", "OPTIONS", "POST", "PUT", "PATCH", "DELETE"]
+      allow_headers: ["Content-Type", "Authorization"]
+      expose_headers: ["Link"]
       max_age: 3600
-      hosts: ['^api\.']
