--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,16 +1,16 @@
 nelmio_cors:
   defaults:
+    origin_regex: true
     allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"]
     allow_methods: ["GET", "OPTIONS", "POST", "PUT", "PATCH", "DELETE"]
-    allow_headers: ["Content-Type", "Authorization"]
+    allow_headers: ["*"]
     expose_headers: ["Link"]
     max_age: 3600
-    origin_regex: true
   paths:
     "^/api/":
       origin_regex: true
       allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"] # You probably want to change this regex to match your real domain
       allow_methods: ["GET", "OPTIONS", "POST", "PUT", "PATCH", "DELETE"]
-      allow_headers: ["Content-Type", "Authorization"]
+      allow_headers: ["*"]
       expose_headers: ["Link"]
       max_age: 3600
