--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -7,10 +7,4 @@ nelmio_cors:
     expose_headers: ["Link"]
     max_age: 3600
   paths:
-    "^/api/":
-      origin_regex: true
-      allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"] # You probably want to change this regex to match your real domain
-      allow_methods: ["GET", "OPTIONS", "POST", "PUT", "PATCH", "DELETE"]
-      allow_headers: ["*"]
-      expose_headers: ["Link"]
-      max_age: 3600
+    "^/": null
